fix correction name and alt img

--- a/src/composents/header/header.scss
+++ b/src/composents/header/header.scss
@@ -1,10 +1,12 @@
+@import "../../styles/main.scss";
+
 header {
   display: flex;
   justify-content: space-between;
   align-items: center;
   margin: 25px;
   padding: 25px;
-  background-color: grey;
+  background-color: $color-header-footer;
   border-radius: 25px;
   border: 1px #8e8e0a solid;
   overflow: hidden;
